--- a/src/components/screens/RestaurantScreen/RestaurantScreen.css
+++ b/src/components/screens/RestaurantScreen/RestaurantScreen.css
@@ -6,6 +6,10 @@
     padding-bottom: 10px;
 }
 
+.restaurant--sub-headding {
+    padding-left: 16px;
+}
+
 .restaurant--search {
     width: 100%;
     display: block;
