--- a/src/components/widgets/ImageCard/ImageCard.css
+++ b/src/components/widgets/ImageCard/ImageCard.css
@@ -1,6 +1,6 @@
 .image-card {
     box-shadow: 0 4px 5.1px 2px rgba(0, 0, 0, 0.25);
-    margin: 16px;
+    margin: 16px 10px 16px 10px;
     padding: 10px auto;
     border-radius: 24px;
 }
